--- a/public/bower.json
+++ b/public/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angular": "~1.4.9"
   }
 }
