--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "express": "^4.13.4",
     "express-jwt": "^3.4.0",
     "jquery": "^3.0.0",
     "jsonwebtoken": "^7.1.3",
     "pi-gpio": "git://github.com/xlr8runner/pi-gpio.git#gpioutil-fs-hybrid",
-    "promise": "^7.1.1",
-    "sha3": "^1.2.0"
+    "promise": "^7.1.1"
   },
   "devDependencies": {
     "browserify": "^13.0.1",
@@ -26,6 +26,7 @@
     "mock-require": "^1.3.0",
     "sinon": "^1.17.4",
     "supertest": "^1.2.0",
+    "timekeeper": "^0.1.1",
     "watch": "^0.19.1"
   }
 }
