--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "chalk": "^1.1.3",
     "express": "^4.13.4",
     "express-jwt": "^3.4.0",
     "jquery": "^3.0.0",
     "jsonwebtoken": "^7.1.3",
     "pi-gpio": "git://github.com/xlr8runner/pi-gpio.git#gpioutil-fs-hybrid",
-    "promise": "^7.1.1"
+    "promise": "^7.1.1",
+    "prompt": "^1.0.0"
   },
   "devDependencies": {
     "browserify": "^13.0.1",
